samples/_failures_safe/1761695168_6f20ab_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_788635ae.c: In function ‘main’:
./samples/SAFE/__tmp_788635ae.c:154:9: error: expected expression at end of input
  154 |         return
      |         ^~~~~~
./samples/SAFE/__tmp_788635ae.c:154:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_788635ae.c:154:9: error: expected declaration or statement at end of input
